Fixed "unread message" notification being the wrong size/color

--- a/Public/cv_natsukivision_public.theme.css
+++ b/Public/cv_natsukivision_public.theme.css
@@ -209,7 +209,7 @@
    max-height: unset;
  }
  
- .item__58105 {
+ ._581051df43c5ebb6-item {
    width: 12px;
    background-color: #00ff00
  }
