--- a/private do not use/natsukivision.theme.css
+++ b/private do not use/natsukivision.theme.css
@@ -216,7 +216,7 @@
    max-height: unset;
  }
  
- .item__58105 {
+ ._581051df43c5ebb6-item {
    width: 12px;
    background-color: #00ff00
  }
